prevent overflowing

--- a/web/styles/index.scss
+++ b/web/styles/index.scss
@@ -61,3 +61,7 @@ a {
         flex-direction: row;
     }
 }
+
+.scroll {
+    overflow: hidden auto;
+}
